# gestion_habitaciones

./: .env  Readme.md  Setup.md  check_env.py  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/auth/: routes.py
app/api/v1/routes/: administrador.py  bookings.py  empleado.py  empresa.py  rooms.py  superusuario.py  users.py  usuario.py
app/db/: migrate.py  models.py  session.py
app/schemas/: booking.py  empresa.py  room.py  sala.py  user.py  usuario.py
app/services/: administrador_service.py  empleado_service.py  empresa_service.py  room_service.py  superusuario_service.py  usuario_service.py
app/tests/: test_db_connection.py  test_main.py
app/utils/: fecha_utils.py
tests/: test_db_connection.py
